test/parsing/ferguson/reserved-sync.chpl
var sync = 0;

proc f(sync) {
}

class sync {
  var sync =0;
}

type sync = real;

proc sync() {
}

proc test() {
  try {
  } catch sync {
  }
}
